kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-deployment
  labels:
    app: pingpong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
      - name: pingpong
        image: fitrakz/pingpongapps
      volumes:
      - name: config-volume
        configMap:
          name: pingpong-configmap
