kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-service
spec:
  selector:
    app: pingpong
  type: NodePort
  ports:
  - protocol: TCP
    port: 3000
